# The-Bricks-By-Bharani

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: build-windows.yml  deploy-proxy.yml
apps/desktop/: package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: AgentComposer.tsx  (+34 more)
engine/agent-nano-bricks/: BUILD.md  NOTICE.md  agent-nano-bricks.spec  pyproject.toml  serve.py
engine/agent-nano-bricks/agent/: budget.py  checkpoint.py  context_compressor.py  error_classifier.py  events.py  loop.py  memory.py  model_fallback.py  skills.py
engine/agent-nano-bricks/nb_utils/: __init__.py  csv_utils.py  data_stats.py  excel_utils.py  file_utils.py  html_utils.py  json_utils.py  md_utils.py  pdf_utils.py  scrape_utils.py  social_scrape_utils.py  text_utils.py  web_scrape_utils.py  web_utils.py
engine/agent-nano-bricks/prompts/: system.md
engine/agent-nano-bricks/providers/: proxy.py
engine/agent-nano-bricks/swarm/: decompose.py  scheduler.py
engine/agent-nano-bricks/tools/: executor.py
services/proxy/: DEPLOY.md  package.json  tsconfig.json  wrangler.toml
services/proxy/src/: auth.ts  image.ts  index.ts  providers.ts  quota.ts  ratelimit.ts  search.ts  stream.ts  types.ts
supabase/migrations/: 001_create_tiers.sql  002_create_subscriptions.sql  003_create_usage_daily.sql  004_create_projects.sql
(+19 files in other folders)
