[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-nano-bricks"
version = "0.1.0"
description = "Agent Nano Bricks — the execution engine behind Nano Bricks"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
  "openai==1.59.7",
  "aiofiles==24.1.0",
  "aiohttp==3.11.11",
  "tiktoken==0.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
agent-nano-bricks = "serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "swarm*", "providers*", "tools*"]
